--- a/niudot-app/src/assets/styles/_sidebar.scss
+++ b/niudot-app/src/assets/styles/_sidebar.scss
@@ -1,9 +1,9 @@
 $sidebar-bg-color: $nav-background !default;
 $sidebar-color: $color-text-primary !default;
-$sidebar-width: 12rem !default;
+$sidebar-width: 14rem !default;
 $sidebar-collapsed-width: 5rem !default;
-$highlight-color: $color-text-primary !default;
-$submenu-bg-color: lighten($nav-background, 5%) !default;
+$highlight-color: $color-primary !default;
+$submenu-bg-color: $nav-background !default;
 $submenu-bg-color-collapsed: $nav-background !default;
 $icon-bg-color: $color-text-primary !default;
 $icon-size: 2rem !default;
@@ -20,10 +20,19 @@ $icon-size: 2rem !default;
 
 .pro-inner-item {
 	padding-left: 0.5rem !important;
+
+	&:hover {
+		.pro-arrow-wrapper .pro-arrow {
+			border-color: $color-primary !important;
+		}
+	}
 }
 
-.react-slidedown .pro-inner-list-item {
-	border-radius: 50% !important;
+li.pro-menu-item.pro-sub-menu.sidebar-list-item.rounded.open
+	> div.pro-inner-item
+	> span.pro-arrow-wrapper
+	> span {
+	border-color: $color-primary !important;
 }
 
 .pro-arrow-wrapper {
@@ -36,7 +45,7 @@ $icon-size: 2rem !default;
 	.pro-menu-item.pro-sub-menu
 	.pro-inner-list-item
 	.pro-inner-item:before {
-	background-color: $color-text-primary;
+	// background-color: $color-text-primary;
 	border: none;
 }
 
@@ -59,12 +68,4 @@ $icon-size: 2rem !default;
 	justify-content: center;
 	align-items: center;
 	border: none !important;
-}
-
-.sidebar-list-item {
-	transition: background-color $transition-default;
-
-	&:hover {
-		background-color: $color-primary;
-	}
 }
