--- a/niudot-app/src/assets/styles/_mobile.scss
+++ b/niudot-app/src/assets/styles/_mobile.scss
@@ -34,8 +34,9 @@
 
 @media screen and (max-width: 576px) {
 	.sidebar-container {
-		// ! Cambiar esto luego
-		// display: none;
+		width: 16rem;
+		left: 0;
+		margin: 0;
 	}
 
 	.page {
