--- a/niudot-app/src/assets/styles/styles.css
+++ b/niudot-app/src/assets/styles/styles.css
@@ -217,6 +217,7 @@ tbody td {
 
 .sidebar-container {
   position: fixed;
+  z-index: 10;
   width: 12rem;
   height: 100%;
   display: flex;
@@ -225,8 +226,8 @@ tbody td {
 }
 
 .sidebar-hide {
-  left: -100%;
-  transition: position 2s;
+  left: -12rem;
+  transition: left position 2s;
 }
 
 .sidebar-logo {
@@ -350,6 +351,12 @@ tbody td {
   }
 }
 @media screen and (max-width: 576px) {
+  .sidebar-container {
+    width: 16rem;
+    left: 0;
+    margin: 0;
+  }
+
   .page {
     width: 100%;
     margin: 0;
