--- a/niudot-app/src/assets/styles/_tables.scss
+++ b/niudot-app/src/assets/styles/_tables.scss
@@ -22,11 +22,11 @@ thead {
 		background-color: $color-primary;
 
 		&:first-child {
-			border-radius: 0.5rem 0 0 0;
+			border-radius: $border-radius 0 0 0;
 		}
 
 		&:last-child {
-			border-radius: 0 0.5rem 0 0;
+			border-radius: 0 $border-radius 0 0;
 		}
 	}
 }
@@ -35,11 +35,11 @@ tbody {
 	tr:last-of-type {
 		td {
 			&:first-child {
-				border-radius: 0 0 0 0.5rem;
+				border-radius: 0 0 0 $border-radius;
 			}
 
 			&:last-child {
-				border-radius: 0 0 0.5rem 0;
+				border-radius: 0 0 $border-radius 0;
 			}
 		}
 	}
