--- a/niudot-app/src/assets/styles/styles.css
+++ b/niudot-app/src/assets/styles/styles.css
@@ -29,15 +29,15 @@ body {
 }
 
 .rounded {
-  border-radius: 0.5rem;
+  border-radius: 0.25rem;
 }
 
 .rounded-l {
-  border-radius: 0.5rem 0 0 0.5rem;
+  border-radius: 0.25rem 0 0 0.25rem;
 }
 
 .rounded-r {
-  border-radius: 0 0.5rem 0.5rem 0;
+  border-radius: 0 0.25rem 0.25rem 0;
 }
 
 .icon {
@@ -199,17 +199,17 @@ thead th {
   background-color: #456cf6;
 }
 thead th:first-child {
-  border-radius: 0.5rem 0 0 0;
+  border-radius: 0.25rem 0 0 0;
 }
 thead th:last-child {
-  border-radius: 0 0.5rem 0 0;
+  border-radius: 0 0.25rem 0 0;
 }
 
 tbody tr:last-of-type td:first-child {
-  border-radius: 0 0 0 0.5rem;
+  border-radius: 0 0 0 0.25rem;
 }
 tbody tr:last-of-type td:last-child {
-  border-radius: 0 0 0.5rem 0;
+  border-radius: 0 0 0.25rem 0;
 }
 tbody td {
   background-color: #353c4a;
@@ -442,7 +442,7 @@ tbody td {
   width: 4px;
   min-width: 4px;
   height: 4px;
-  border: 1px solid #283140;
+  border: 1px solid #323d50;
   border-radius: 50%;
   margin-right: 15px;
   position: relative;
@@ -461,7 +461,7 @@ tbody td {
 }
 .pro-sidebar .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item {
   position: relative;
-  background-color: #283140;
+  background-color: #323d50;
 }
 .pro-sidebar .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item > div > ul {
   padding-top: 15px;
@@ -481,13 +481,13 @@ tbody td {
   background-color: transparent;
 }
 .pro-sidebar .pro-menu a:hover {
-  color: #456cf6;
+  color: #ffffff;
 }
 .pro-sidebar .pro-menu .pro-menu-item {
   font-size: 15px;
 }
 .pro-sidebar .pro-menu .pro-menu-item.active {
-  color: #456cf6;
+  color: #ffffff;
 }
 .pro-sidebar .pro-menu .pro-menu-item .suffix-wrapper {
   opacity: 1;
@@ -508,7 +508,7 @@ tbody td {
 }
 .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item:focus {
   outline: none;
-  color: #456cf6;
+  color: #ffffff;
 }
 .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item > .pro-icon-wrapper {
   margin-right: 10px;
@@ -531,7 +531,7 @@ tbody td {
   flex-shrink: 1;
 }
 .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item:hover {
-  color: #456cf6;
+  color: #ffffff;
 }
 .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item:hover .pro-icon-wrapper .pro-icon {
   animation: swing ease-in-out 0.5s 1 alternate;
@@ -732,49 +732,40 @@ tbody td {
   position: fixed;
 }
 
-.pro-sidebar .pro-menu .pro-menu-item {
-  font-size: 1rem;
+.pro-sidebar-inner ::-webkit-scrollbar {
+  width: 0;
 }
 
-.pro-inner-item {
-  padding-left: 0.5rem !important;
-}
-.pro-inner-item:hover .pro-arrow-wrapper .pro-arrow {
-  border-color: #456cf6 !important;
+.pro-menu-item {
+  font-size: 1rem !important;
 }
 
-li.pro-menu-item.pro-sub-menu.sidebar-list-item.rounded.open > div.pro-inner-item > span.pro-arrow-wrapper > span {
-  border-color: #456cf6 !important;
-}
-
-.pro-arrow-wrapper {
-  display: flex !important;
-  align-items: center !important;
-}
-
-.pro-sidebar .pro-menu .pro-menu-item.pro-sub-menu .pro-inner-list-item .pro-inner-item:before {
-  border: none;
-}
-
-.pro-icon-wrapper {
-  margin-right: 0.25rem !important;
-}
-
-.pro-menu {
-  padding: 0 0.75rem;
-}
-
-.pro-sidebar .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item > div > ul {
-  padding: 0.25rem 0;
-}
-
-.pro-sidebar > .pro-sidebar-inner > .pro-sidebar-layout .pro-sidebar-header {
-  padding: 0;
+.pro-sidebar-header {
+  position: fixed;
+  width: 14rem;
   height: 4rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: none !important;
+  background-color: #283140 !important;
+  color: #ffffff;
+  border-bottom: none !important;
+  z-index: 10;
+}
+
+.pro-sidebar-content {
+  margin-top: 4rem;
+}
+
+.sidebar-item {
+  transition: background-color 150ms;
+}
+.sidebar-item:hover {
+  background-color: #456cf6;
+}
+
+.pro-inner-list-item .pro-inner-item:hover {
+  color: #456cf6 !important;
 }
 
 .page {
@@ -900,7 +891,7 @@ li.pro-menu-item.pro-sub-menu.sidebar-list-item.rounded.open > div.pro-inner-ite
 }
 
 .input-btn-primary {
-  background-color: #456cf6;
+  background-color: #353c4a;
 }
 
 .input-btn-transparent {
