Finished retractile forms implentation

--- a/niudot-app/src/assets/styles/_buttons.scss
+++ b/niudot-app/src/assets/styles/_buttons.scss
@@ -25,7 +25,7 @@
 
 .input-btn-primary {
 	@extend %input-btn;
-	background-color: $color-secondary;
+	background-color: $color-primary;
 }
 
 .input-btn-transparent {
