--- a/niudot-app/src/assets/styles/_page.scss
+++ b/niudot-app/src/assets/styles/_page.scss
@@ -12,6 +12,7 @@
 	justify-content: space-between;
 	align-items: center;
 	padding: 0 1rem;
+	z-index: 10;
 
 	background-color: $nav-background;
 }
