--- a/niudot-app/src/assets/styles/styles.css
+++ b/niudot-app/src/assets/styles/styles.css
@@ -44,10 +44,6 @@ body {
   color: #ffffff;
 }
 
-.form {
-  margin-bottom: 2rem;
-}
-
 .form-container {
   max-width: 40rem;
   margin-bottom: 2rem;
@@ -55,9 +51,6 @@ body {
   grid-template-columns: repeat(12, 1fr);
   grid-auto-rows: minmax(2.5rem, auto);
   gap: 0.75rem;
-}
-.form-container:last-child {
-  margin-bottom: 0;
 }
 
 .form-title-container {
@@ -80,6 +73,28 @@ body {
   user-select: none;
 }
 .form-title-container .form-description {
+  color: #9ba6ad;
+}
+
+.form-retractile > .form-retractile {
+  margin-left: 1rem;
+  color: #ffffff;
+}
+
+.form-retractile .form-container {
+  margin-left: 1rem;
+}
+
+.form-retractile-form {
+  padding-bottom: 0.5rem;
+  margin-bottom: 0.5rem;
+  border-bottom: 1px solid #353c4a;
+}
+.form-retractile-form:last-child {
+  border-bottom: none;
+}
+
+.form-retractile-title:hover {
   color: #9ba6ad;
 }
 
@@ -140,6 +155,10 @@ body {
   grid-column: span 1;
 }
 
+.form-field-xs > .std-input {
+  text-align: center;
+}
+
 .form-field-lg-nl {
   grid-column: 1/span 6;
 }
@@ -158,6 +177,10 @@ body {
 
 .form-field-flex {
   display: flex;
+}
+
+.form-retractile-child {
+  color: #9ba6ad;
 }
 
 .form-title-chevron {
@@ -327,7 +350,7 @@ tbody td {
     right: 0;
   }
 }
-@media (max-width: 576px) {
+@media (max-width: 678px) {
   .pro-sidebar.sm {
     position: fixed;
     left: -14rem;
@@ -728,6 +751,10 @@ tbody td {
   display: none;
 }
 
+li.pro-menu-item.pro-sub-menu.sidebar-item.open > div.pro-inner-item {
+  background-color: #456cf6;
+}
+
 .pro-sidebar {
   position: fixed;
 }
@@ -782,6 +809,7 @@ tbody td {
   justify-content: space-between;
   align-items: center;
   padding: 0 1rem;
+  z-index: 10;
   background-color: #283140;
 }
 
@@ -829,7 +857,16 @@ tbody td {
     grid-column: 1/span 1;
   }
 }
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 970px) {
+  .form-retractile > .form-retractile {
+    margin-left: 0;
+  }
+
+  .form-retractile .form-container {
+    margin-left: 0;
+  }
+}
+@media screen and (max-width: 678px) {
   .sidebar-container {
     width: 16rem;
     left: 0;
@@ -869,6 +906,11 @@ tbody td {
   .form-field-xs-nl {
     grid-column: 1/span 1;
   }
+
+  .form-retractile-form {
+    padding-bottom: 0.75rem;
+    margin-bottom: 0.75rem;
+  }
 }
 .login-container {
   display: flex;
@@ -897,7 +939,7 @@ tbody td {
 }
 
 .input-btn-primary {
-  background-color: #353c4a;
+  background-color: #456cf6;
 }
 
 .input-btn-transparent {
