--- a/niudot-app/src/assets/styles/styles.css
+++ b/niudot-app/src/assets/styles/styles.css
@@ -44,8 +44,11 @@ body {
   color: #ffffff;
 }
 
-.form-container {
+.form {
   max-width: 40rem;
+}
+
+.form-container {
   margin-bottom: 2rem;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
