--- a/niudot-app/src/assets/styles/styles.css
+++ b/niudot-app/src/assets/styles/styles.css
@@ -3,9 +3,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: inherit;
   color: inherit;
-  font-family: "Nunito Sans";
+  font-family: "Nunito", sans-serif !important;
 }
 
 :root {
@@ -23,7 +22,6 @@ li {
 html,
 body {
   min-height: 100vh;
-  font-family: "Nunito", sans-serif !important;
   background-color: #1e2530;
   color: #ffffff;
 }
@@ -203,39 +201,36 @@ body {
   margin-bottom: 0;
 }
 
-.dropdown {
+.dropdown-container {
   position: relative;
-}
-
-.dropdown-content {
-  position: absolute;
+  max-width: 100%;
+  display: flex;
+  height: 2.5rem;
+  align-items: stretch;
+  color: #9ba6ad;
   background-color: #353c4a;
-  min-width: 100%;
-  top: 2.5rem;
-  border-radius: 0 0 0.25rem 0.25rem;
-  box-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
+  border: none;
+  outline: none;
 }
 
-.dropdown-content li {
-  color: #ffffff;
-  padding: 0.75rem 1rem;
-  transition: background-color 150ms;
-  cursor: pointer;
+.dropdown-container select {
+  appearance: none;
+  width: 100%;
+  padding: 0 0.75rem;
+  font-size: 0.87rem;
+  background-color: #353c4a;
+  border: none;
+  border-radius: 0.25rem;
 }
-.dropdown-content li:last-child {
-  border-radius: 0 0 0.25rem 0.25rem;
-}
-
-.dropdown-content li:hover {
-  background-color: #456cf6;
-}
-
-.dropdown-active-input {
-  border-radius: 0.25rem 0 0 0;
+.dropdown-container select:focus {
+  outline: none;
 }
 
-.dropdown-active-btn {
-  border-radius: 0 0.25rem 0 0;
+.dropdown-icon {
+  position: absolute;
+  right: 0.75rem;
+  bottom: 25%;
+  transform: translateY(calc(25% - 0.05rem));
 }
 
 .table-container {
