--- a/niudot-app/src/assets/styles/_inputs.scss
+++ b/niudot-app/src/assets/styles/_inputs.scss
@@ -58,12 +58,6 @@
 	}
 }
 
-%form-field {
-	display: flex;
-	align-items: center;
-	width: 100%;
-}
-
 %input {
 	max-width: 100%;
 	display: flex;
@@ -102,6 +96,13 @@
 	text-align: center;
 }
 
+%form-field {
+	display: flex;
+	align-items: center;
+	width: 100%;
+	height: 4rem;
+}
+
 .form-field-xl {
 	@extend %form-field;
 	grid-column: span 12;
@@ -132,18 +133,22 @@
 }
 
 .form-field-lg-nl {
+	@extend %form-field;
 	grid-column: 1 / span 6;
 }
 
 .form-field-md-nl {
+	@extend %form-field;
 	grid-column: 1 / span 4;
 }
 
 .form-field-sm-nl {
+	@extend %form-field;
 	grid-column: 1 / span 3;
 }
 
 .form-field-xs-nl {
+	@extend %form-field;
 	grid-column: 1 / span 1;
 }
 
@@ -177,27 +182,27 @@
 }
 
 .dropdown-container {
+	@extend %input;
+	width: 100%;
 	position: relative;
-	max-width: 100%;
-	display: flex;
-	height: $input-height;
-	align-items: stretch;
-	
 	color: $color-text-secondary;
-	background-color: $color-secondary;
-	border: none;
-	outline: none;
 }
 
 .dropdown-container select {
+	position: absolute;
+	left: 0;
+
 	appearance: none;
 	width: 100%;
+	height: 100%;
 	padding: 0 $input-x-padding;
 	
 	font-size: 0.87rem;
 	background-color: $color-secondary;
 	border: none;
 	border-radius: $border-radius;
+	
+	cursor: pointer;
 
 	&:focus {
 		outline: none;
@@ -208,5 +213,6 @@
 	position: absolute;
 	right: 0.75rem;
 	bottom: 25%;
-	transform: translateY(calc(25% - 0.05rem));
+	transform: translateY(calc(25% - 0.15rem));
+	pointer-events: none;
 }
