--- a/niudot-app/src/assets/styles/styles.css
+++ b/niudot-app/src/assets/styles/styles.css
@@ -99,13 +99,7 @@ body {
   color: #9ba6ad;
 }
 
-.form-field-xs, .form-field-sm, .form-field-md, .form-field-lg, .form-field-xl {
-  display: flex;
-  align-items: center;
-  width: 100%;
-}
-
-.alt-input, .std-input {
+.dropdown-container, .alt-input, .std-input {
   max-width: 100%;
   display: flex;
   height: 2.5rem;
@@ -118,7 +112,7 @@ body {
   border: none;
   outline: none;
 }
-.alt-input::placeholder, .std-input::placeholder {
+.dropdown-container::placeholder, .alt-input::placeholder, .std-input::placeholder {
   color: #9ba6ad;
 }
 
@@ -134,6 +128,13 @@ body {
 .input-checkbox-content {
   width: 100%;
   text-align: center;
+}
+
+.form-field-xs-nl, .form-field-sm-nl, .form-field-md-nl, .form-field-lg-nl, .form-field-xs, .form-field-sm, .form-field-md, .form-field-lg, .form-field-xl {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 4rem;
 }
 
 .form-field-xl {
@@ -202,25 +203,23 @@ body {
 }
 
 .dropdown-container {
+  width: 100%;
   position: relative;
-  max-width: 100%;
-  display: flex;
-  height: 2.5rem;
-  align-items: stretch;
   color: #9ba6ad;
-  background-color: #353c4a;
-  border: none;
-  outline: none;
 }
 
 .dropdown-container select {
+  position: absolute;
+  left: 0;
   appearance: none;
   width: 100%;
+  height: 100%;
   padding: 0 0.75rem;
   font-size: 0.87rem;
   background-color: #353c4a;
   border: none;
   border-radius: 0.25rem;
+  cursor: pointer;
 }
 .dropdown-container select:focus {
   outline: none;
@@ -230,7 +229,8 @@ body {
   position: absolute;
   right: 0.75rem;
   bottom: 25%;
-  transform: translateY(calc(25% - 0.05rem));
+  transform: translateY(calc(25% - 0.15rem));
+  pointer-events: none;
 }
 
 .table-container {
