--- a/niudot-app/src/assets/styles/_config.scss
+++ b/niudot-app/src/assets/styles/_config.scss
@@ -10,6 +10,9 @@ $color-alert: #bd783f;
 $color-text-primary: #ffffff;
 $color-text-secondary: #9ba6ad;
 
+$form-submit-btn-color: #36a794;
+$form-cancel-btn-color: #bd783f;
+
 $input-height: 2.5rem;
 $input-x-padding: 0.75rem;
 $transition-default: 150ms;
