--- a/niudot-app/src/assets/styles/_inputs.scss
+++ b/niudot-app/src/assets/styles/_inputs.scss
@@ -100,7 +100,6 @@
 	display: flex;
 	align-items: center;
 	width: 100%;
-	height: 4rem;
 }
 
 .form-field-xl {
@@ -215,4 +214,32 @@
 	bottom: 25%;
 	transform: translateY(calc(25% - 0.15rem));
 	pointer-events: none;
+}
+
+.form-btn-container {
+	margin-top: 2rem;
+}
+
+%form-btn {
+	width: 100%;
+	height: 100%;
+	
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	border: none;
+	outline: none;
+	color: $color-text-primary;
+	font-weight: bold;
+}
+
+.form-submit-btn {
+	@extend %form-btn;
+	background-color: $form-submit-btn-color;
+}
+
+.form-cancel-btn {
+	@extend %form-btn;
+	background-color: $form-cancel-btn-color;
 }
