Front-back end integration

--- a/niudot-app/src/assets/styles/_config.scss
+++ b/niudot-app/src/assets/styles/_config.scss
@@ -13,6 +13,8 @@ $color-text-secondary: #9ba6ad;
 $form-submit-btn-color: #36a794;
 $form-cancel-btn-color: #bd783f;
 
+$sidebar-width: 14rem;
+
 $input-height: 2.5rem;
 $input-x-padding: 0.75rem;
 $transition-default: 150ms;
