--- a/niudot-app/src/assets/styles/styles.css
+++ b/niudot-app/src/assets/styles/styles.css
@@ -853,7 +853,7 @@ li.pro-menu-item.pro-sub-menu.sidebar-item.open > div.pro-inner-item {
 
 .page {
   min-height: 100%;
-  width: calc(100% - 14rem);
+  width: calc(100% - $sidebar-width);
   margin-left: 14rem;
 }
 
