--- a/niudot-app/src/assets/styles/_page.scss
+++ b/niudot-app/src/assets/styles/_page.scss
@@ -18,6 +18,8 @@
 }
 
 .page-container {
+	display: grid;
+	grid-template-columns: auto 200px;
 	padding: 2rem;
 	padding-top: calc(4rem + 2rem);
 }
