--- a/niudot-app/src/assets/styles/styles.css
+++ b/niudot-app/src/assets/styles/styles.css
@@ -1302,28 +1302,41 @@ li.pro-menu-item.pro-sub-menu.sidebar-item.open > div.pro-inner-item {
   background-color: #bd783f;
 }
 
-.vertical-menu {
-  width: 200px;
+.page-menu {
   position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
-.vertical-menu a {
+.page-menu a {
   color: #9BA6AD;
-  display: block;
-  padding: 0.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 1rem;
+  height: 2.5rem;
   text-decoration: none;
-  text-align: center;
-  margin: 0.25rem;
+  border-radius: 0.25rem;
 }
 
-.vertical-menu a:hover {
+.page-menu a:hover {
   background-color: #456cf6;
-  border-radius: 0.5rem;
 }
 
-.vertical-menu a.active {
+.page-menu a.active {
   background-color: #456cf6;
   color: white;
-  border-radius: 0.5rem;
 }
 /*# sourceMappingURL=styles.css.map */
