--- a/niudot-app/src/assets/styles/_mobile.scss
+++ b/niudot-app/src/assets/styles/_mobile.scss
@@ -30,7 +30,6 @@
 	.form-field-xs-nl {
 		grid-column: 1 / span 1;
 	}
-
 }
 
 @media screen and (max-width: 970px) {
@@ -43,10 +42,7 @@
 			margin-left: 0;
 		}
 	}
-
-	
 }
-
 
 @media screen and (max-width: 678px) {
 	.sidebar-container {
@@ -93,11 +89,10 @@
 		padding-bottom: 0.75rem;
 		margin-bottom: 0.75rem;
 	}
-	
 }
 
 @media screen and (max-width: 1200px) {
-	.vertical-menu {
+	.page-menu {
 		display: none;
 	}
 
