--- a/niudot-app/src/assets/styles/_pagemenu.scss
+++ b/niudot-app/src/assets/styles/_pagemenu.scss
@@ -1,27 +1,30 @@
 .page-menu {
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    align-items: flex-end;
+	position: fixed;
 
-  }
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	align-items: flex-end;
+}
 
-  .page-menu a {
-    color: #9BA6AD;
-    display: flex;
-    align-items: center;
-    padding: 0 1rem;
-    height: $input-height;
-    text-decoration: none;
-    border-radius: $border-radius;
-  }
-  
-  .page-menu a:hover {
-    background-color: $color-primary;
-  }
-  
-  .page-menu a.active {
-    background-color: $color-primary;
-    color: white;
-  }
+.page-menu a {
+	height: $input-height;
+	padding: 0 1rem;
+
+	display: flex;
+	align-items: center;
+
+	color: #9ba6ad;
+	text-decoration: none;
+	border-radius: $border-radius;
+	transition: background-color $transition-default;
+}
+
+.page-menu a:hover {
+	background-color: $color-primary;
+}
+
+.page-menu a.active {
+	background-color: $color-primary;
+	color: white;
+}
