--- a/niudot-app/src/assets/styles/styles.css
+++ b/niudot-app/src/assets/styles/styles.css
@@ -871,7 +871,7 @@ li.pro-menu-item.pro-sub-menu.sidebar-item.open > div.pro-inner-item {
 
 .page-container {
   display: grid;
-  grid-template-columns: auto 200px;
+  grid-template-columns: auto 250px;
   padding: 2rem;
   padding-top: calc(4rem + 2rem);
 }
@@ -883,6 +883,7 @@ li.pro-menu-item.pro-sub-menu.sidebar-item.open > div.pro-inner-item {
 }
 
 .page-menu {
+  width: 250px;
   position: fixed;
   display: flex;
   flex-direction: column;
@@ -903,6 +904,7 @@ li.pro-menu-item.pro-sub-menu.sidebar-item.open > div.pro-inner-item {
 
 .page-menu a:hover {
   background-color: #456cf6;
+  color: #ffffff;
 }
 
 .page-menu a.active {
