--- a/niudot-app/src/assets/styles/_inputs.scss
+++ b/niudot-app/src/assets/styles/_inputs.scss
@@ -1,3 +1,8 @@
+.search-input {
+	flex-direction: row !important;
+	gap: 0 !important;
+}
+
 .form {
 	max-width: 40rem;
 }
@@ -7,7 +12,6 @@
 
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
-	grid-auto-rows: minmax($input-height, auto);
 	gap: 0.75rem;
 }
 
@@ -80,7 +84,8 @@
 .std-input {
 	@extend %input;
 	width: 100%;
-	flex: 1;
+	// flex: 1;
+	position: relative;
 }
 
 .alt-input-container {
@@ -98,8 +103,10 @@
 
 %form-field {
 	display: flex;
-	align-items: center;
+	flex-direction: column;
+	justify-content: space-between;
 	width: 100%;
+	gap: 0.5rem;
 }
 
 .form-field-xl {
@@ -241,4 +248,14 @@
 .form-cancel-btn {
 	@extend %form-btn;
 	background-color: $form-cancel-btn-color;
+}
+
+.error {
+	font-size: 0.75rem;
+	height: 0.75rem;
+	color: $form-cancel-btn-color;
+}
+
+.input-error {
+	border: 2px solid $form-cancel-btn-color;
 }
