--- a/niudot-app/src/assets/styles/styles.css
+++ b/niudot-app/src/assets/styles/styles.css
@@ -42,6 +42,11 @@ body {
   color: #ffffff;
 }
 
+.search-input {
+  flex-direction: row !important;
+  gap: 0 !important;
+}
+
 .form {
   max-width: 40rem;
 }
@@ -50,7 +55,6 @@ body {
   margin-bottom: 2rem;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-auto-rows: minmax(2.5rem, auto);
   gap: 0.75rem;
 }
 
@@ -118,7 +122,7 @@ body {
 
 .std-input {
   width: 100%;
-  flex: 1;
+  position: relative;
 }
 
 .alt-input-container {
@@ -132,8 +136,10 @@ body {
 
 .form-field-xs-nl, .form-field-sm-nl, .form-field-md-nl, .form-field-lg-nl, .form-field-xs, .form-field-sm, .form-field-md, .form-field-lg, .form-field-xl {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
   width: 100%;
+  gap: 0.5rem;
 }
 
 .form-field-xl {
@@ -254,6 +260,16 @@ body {
 
 .form-cancel-btn {
   background-color: #bd783f;
+}
+
+.error {
+  font-size: 0.75rem;
+  height: 0.75rem;
+  color: #bd783f;
+}
+
+.input-error {
+  border: 2px solid #bd783f;
 }
 
 .table-container {
