--- a/niudot-app/src/assets/styles/_page.scss
+++ b/niudot-app/src/assets/styles/_page.scss
@@ -12,7 +12,7 @@
 	justify-content: space-between;
 	align-items: center;
 	padding: 0 1rem;
-	z-index: 10;
+	z-index: 5;
 
 	background-color: $nav-background;
 }
@@ -25,10 +25,8 @@
 	padding-top: calc(4rem + 2rem);
 }
 
-.burger-menu {
-	// display: none;
-
+.burger-btn {
 	width: 2rem;
 	height: 2rem;
-	background-color: white;
+	background-color: #ffffff;
 }
