--- a/niudot-app/src/assets/styles/styles.css
+++ b/niudot-app/src/assets/styles/styles.css
@@ -141,6 +141,9 @@ body {
   width: 100%;
   gap: 0.5rem;
 }
+.form-field-xs-nl label, .form-field-sm-nl label, .form-field-md-nl label, .form-field-lg-nl label, .form-field-xs label, .form-field-sm label, .form-field-md label, .form-field-lg label, .form-field-xl label {
+  height: 1.15rem;
+}
 
 .form-field-xl {
   grid-column: span 12;
@@ -867,6 +870,18 @@ li.pro-menu-item.pro-sub-menu.sidebar-item.open > div.pro-inner-item {
   color: #456cf6 !important;
 }
 
+li.pro-menu-item.pro-sub-menu.sidebar-item.open > div.pro-inner-item {
+  background-color: transparent;
+}
+
+.custom-overlay {
+  position: fixed;
+  z-index: 20;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(255, 255, 0, 0.5);
+}
+
 .page {
   min-height: 100%;
   width: calc(100% - $sidebar-width);
@@ -881,7 +896,7 @@ li.pro-menu-item.pro-sub-menu.sidebar-item.open > div.pro-inner-item {
   justify-content: space-between;
   align-items: center;
   padding: 0 1rem;
-  z-index: 10;
+  z-index: 5;
   background-color: #283140;
 }
 
@@ -892,10 +907,10 @@ li.pro-menu-item.pro-sub-menu.sidebar-item.open > div.pro-inner-item {
   padding-top: calc(4rem + 2rem);
 }
 
-.burger-menu {
+.burger-btn {
   width: 2rem;
   height: 2rem;
-  background-color: white;
+  background-color: #ffffff;
 }
 
 .page-menu {
@@ -1030,12 +1045,6 @@ li.pro-menu-item.pro-sub-menu.sidebar-item.open > div.pro-inner-item {
   }
 }
 @media screen and (max-width: 678px) {
-  .sidebar-container {
-    width: 16rem;
-    left: 0;
-    margin: 0;
-  }
-
   .page {
     width: 100%;
     margin: 0;
