Adding origen de fondos

--- a/niudot-app/src/assets/styles/_page.scss
+++ b/niudot-app/src/assets/styles/_page.scss
@@ -26,7 +26,11 @@
 }
 
 .burger-btn {
-	width: 2rem;
-	height: 2rem;
-	background-color: #ffffff;
+	width: 1.5rem;
+	height: 1.5rem;
+}
+
+.burger-icon {
+	width: 100%;
+	height: 100%;
 }
