--- a/niudot-app/src/assets/styles/_config.scss
+++ b/niudot-app/src/assets/styles/_config.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700&display=swap');
 
 // & Global Variables
 $color-primary: #456cf6;
@@ -25,7 +25,7 @@ $border-radius: 0.25rem;
 	margin: 0;
 	box-sizing: border-box;
 	color: inherit;
-	font-family: 'Nunito', sans-serif !important;
+	font-family: 'Nunito Sans', sans-serif !important;
 }
 
 :root {
