Cambios en el login y css

--- a/niudot-app/src/assets/styles/_login.scss
+++ b/niudot-app/src/assets/styles/_login.scss
@@ -3,4 +3,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	height: 100vh;
 }
+
+.vlogin-container{display:'flex'; flex-direction: 'column'; width:'33vh'}
