Kinda finished implementing Tailwind with the Sidebar

--- a/niudot-app/src/assets/styles/_sidebar.scss
+++ b/niudot-app/src/assets/styles/_sidebar.scss
@@ -9,7 +9,7 @@ $icon-bg-color: $color-text-primary !default;
 $icon-size: 2rem !default;
 $breakpoint-sm: 678px !default;
 
-@import '../../../node_modules/react-pro-sidebar/dist/scss/styles.scss';
+@import '../../node_modules/react-pro-sidebar/dist/scss/styles.scss';
 
 li.pro-menu-item.pro-sub-menu.sidebar-item.open > div.pro-inner-item {
 	background-color: $color-primary;
